public/style.css
html, body {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    user-select: none;
}

body {
    background-color: black;
    margin: 0;
    overflow: hidden;
}

@font-face {
    font-family: 'Minecraft-Regular';
    src: url('Minecraft-Regular.otf');
}

a {
    color: white;
}

/* BlockCraft title */
#title {
    font-family: "Minecraft-Regular";
    font-size: 100px;
    color: white;
    margin-bottom: 20px;
}

/* Main menu background image */
#background-image {
    filter: brightness(40%);
    position:absolute;
    width: 100%;
    height: 100%;
    background-image: url("/textures/dirt.png");
    background-repeat: repeat;
    z-index: -1;
}

/* Blocker (exited pointer lock) */
#blocker {
    position: absolute;
    width: 100%;
    height: 100%;
    text-align: center;
    z-index: 3;
    font-family: "Minecraft-Regular";
    font-size: 20px;
}

/* Canvas HUD */
#canvas-hud {
    position: absolute;
    z-index: 0;
    padding: 0;
    margin: 0;
}

/* INPUT */
#name-container {
    text-align: center;
    top: calc(62vh + 60px);
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 3;
}

.input {
    color: white;
    font-family : inherit;
    border: none;
    text-decoration: none;
    outline: none;
    left: 10px;
    width: 100%;
    height: 100px;
    font-size: 40px;
    box-sizing:border-box;
    background-color: rgba(0, 0, 0, 0.5);
    text-align: center;
}

.input::placeholder {
    color: white;
    filter:  brightness(60%);
    text-align: center;
}

.input:focus::placeholder {
    color: transparent;
}


/* START BUTTON */

#start-button {
    color: white;
    font-family : inherit;
    width: 100%;
    height: 100px;
    text-decoration: none;
    border: none;
    outline: none;
    cursor: pointer;
    font-size: 40px;
    background-color: rgba(0, 0, 0, 0);
    overflow: visible;
}

.bar {
    width: 0%;
    height: 100%;
    background-color: green;
    text-align: center;
    line-height: 100px;
    overflow: visible;
    white-space: nowrap
}

#continue-bar {
    width: 100%;
}

/* NAV BAR */

#nav {
    height: 80px;
    text-align: left;
    background-color: rgba(0, 0, 0, 0.5);
    color: white;
    font-family: "Minecraft-Regular";
}

#blocker button:hover {
    background-color: rgba(0, 0, 0, 0.6);
}
  
#blocker button.active {
    background-color: rgba(0, 0, 0, 0.7);
}

/* NAVBAR CONTENT */

.tabcontent {
    border-top: none;
    text-align: left;
    height: 40vh;
    color: white;
    background-color: rgba(0, 0, 0, 0.5);
    padding: 40px;
}

.tablinks {
    color: white;
    font-size: 30px;
    font-family : inherit;
    background-color: rgba(0, 0, 0, 0);
    float: left;
    border: none;
    outline: none;
    cursor: pointer;
    height: 100%;
    width: 49.9%;
    transition: 0.3s;
}

/* TAB CONTAINER */

.container {
    position: absolute;
    width: 60%;
    height: 40vh;
    min-width: 600px;
    margin-left: -30%;
    left: 50vw;
}

/* WELCOME PAGE */

/* #welcome {
    padding: 20px;
} */

/* SERVER LIST */

#server-list {
    overflow-y: scroll;
}

.server {
    margin-bottom: 20px;
    padding: 20px;
    background-color: rgba(0, 0, 0, 0.5);
}

.server:hover {
    background-color: rgba(0, 0, 0, 0.7);
    cursor: pointer;
    outline: 2px solid white;
}

.server p {
    margin-top: 0;
    margin-bottom: 10px;
}

#refresh-servers {
    margin-bottom: 20px;
    text-align: center;
    line-height: 50px;
    width: 100%;
    height: 50px;
    background-color: rgba(0, 0, 0, 0.5);
}

#refresh-servers:hover {
    cursor: pointer;
    background-color: rgba(0, 0, 0, 0.7);
}

/* CHANGELOG */

#changelog {
    overflow-y: scroll;
}

/* VIDEO SETTINGS */

#video-settings {
    overflow-y: scroll;
}

#reset-video {
    margin-top: 20px;
    text-align: center;
    line-height: 50px;
    width: 100%;
    height: 50px;
    background-color: rgba(0, 0, 0, 0.5);
}

#reset-video:hover {
    cursor: pointer;
    background-color: rgba(0, 0, 0, 0.7);
}

.slider-text {
    color: white;
}

.slider {
    -webkit-appearance: none;
    appearance: none;
    width: 100%; 
    height: 15px;
    background: #d3d3d3; 
    outline: none;
    opacity: 1;
    -webkit-transition: .2s;
    transition: opacity .2s;
}

.slider::-webkit-slider-thumb {
    -webkit-appearance: none; 
    appearance: none;
    width: 20px; 
    height: 20px; 
    background: green; 
    cursor: pointer; 
}

/* KEYBOARD SETTINGS */

#keyboard-settings {
    overflow-y: scroll;
}

#reset-keyboard {
    text-align: center;
    line-height: 50px;
    width: 100%;
    height: 50px;
    background-color: rgba(0, 0, 0, 0.5);
}

#reset-keyboard:hover {
    cursor: pointer;
    background-color: rgba(0, 0, 0, 0.7);
}

/* SCROLLBAR */
::-webkit-scrollbar {
  width: 20px;
}
 
::-webkit-scrollbar-thumb {
  background: rgba(0, 0, 0, 0.5);
}

::-webkit-scrollbar-thumb:hover {
  background: rgba(0, 0, 0, 0.7);
}

/* CHANGE KEY */
.change-key {
    outline: none;
    border: none;
    text-decoration: none;
    height: 30px;
    float: right;
    width: 150px;
    background-color: rgba(0, 0, 0, 0.5);
    font-size: 20px;
    font-family: inherit;
    color: white;
    text-align: center;
}

.change-key::placeholder {
    color: white;
}

.change-key:focus::placeholder {
    color: transparent;
}

/* CHAT INPUT */
#chat-input {
    position: absolute;
    left: 5px;
    bottom: 5px;
    height: 35px;
    width: calc(100% - 10px);
    z-index: 2;
    border: none;
    font-family: "Minecraft-Regular";
    font-size: 25px;
    padding-left: 5px;
    text-decoration: none;
    outline: none;
    background-color: rgba(0, 0, 0, 0);
    color: white;
}

#chat-input::placeholder {
    color: white;
}

